tdf#92668: Revert some implementation names, for backwards compatibility

These implementation names of Calc, Draw, Impress, and Writer documents are the
most likely to be checked by existing third-party code, so revert the
corresponding parts of 3099c70b11c7e5b80fe4dbe3dc99171fb38c6fc2 "Fix various
XServiceInfo implementations" (and instead add fixups in CppunitTest_serives).

Change-Id: I1a760adbf4c89a1b4477d6e628abba8d2028ccfe