sc/source/ui/unoobj/docuno.cxx
@@ -2435,7 +2435,10 @@ uno::Sequence<OUString> SAL_CALL ScModelObj::getAvailableServiceNames()
 // XServiceInfo
 OUString SAL_CALL ScModelObj::getImplementationName() throw(uno::RuntimeException, std::exception)
 {
-    return OUString( "com.sun.star.comp.Calc.SpreadsheetDocument" );
+    return OUString( "ScModelObj" );
+    /* // Matching the .component information:
+       return OUString( "com.sun.star.comp.Calc.SpreadsheetDocument" );
+    */
 }
 
 sal_Bool SAL_CALL ScModelObj::supportsService( const OUString& rServiceName )
