sd/source/ui/unoidl/unomodel.cxx
@@ -1184,9 +1184,12 @@ uno::Sequence< OUString > SAL_CALL SdXImpressDocument::getAvailableServiceNames(
 OUString SAL_CALL SdXImpressDocument::getImplementationName()
     throw(uno::RuntimeException, std::exception)
 {
-    return mbImpressDoc
-        ? OUString("com.sun.star.comp.Draw.PresentationDocument")
-        : OUString("com.sun.star.comp.Draw.DrawingDocument");
+    return OUString( "SdXImpressDocument" );
+    /* // Matching the .component information:
+       return mbImpressDoc
+           ? OUString("com.sun.star.comp.Draw.PresentationDocument")
+           : OUString("com.sun.star.comp.Draw.DrawingDocument");
+    */
 }
 
 sal_Bool SAL_CALL SdXImpressDocument::supportsService( const OUString& ServiceName )
